--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,27 @@
 plugins {
 	id 'org.springframework.boot' version '2.3.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+	id 'java'
 	id 'groovy'
 }
 
 group = 'uk.reactive.poc'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+targetCompatibility = '11'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.codehaus.groovy:groovy'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation "org.codehaus.groovy:groovy:2.5.13"
+	testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
 }
 
 test {
