--- a/build.gradle
+++ b/build.gradle
@@ -12,19 +12,32 @@ targetCompatibility = '11'
 
 repositories {
     mavenCentral()
+    jcenter()
+}
+
+ext {
+    lombokVersion = '1.18.16'
+    groovyVersion = '3.0.5'
+    spockVersion = '2.0-M3-groovy-3.0'
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.codehaus.groovy:groovy'
-    compileOnly 'org.projectlombok:lombok:1.18.16'
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testImplementation "org.codehaus.groovy:groovy:2.5.13"
-    testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
+    testImplementation "org.codehaus.groovy:groovy:${groovyVersion}"
+    testCompile "org.spockframework:spock-core:${spockVersion}"
+    testCompile "org.spockframework:spock-spring:${spockVersion}"
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
